Fix corner <StatusIcon> should have higher z-index to be placed above other elements

--- a/src/styles/StatusIcon.scss
+++ b/src/styles/StatusIcon.scss
@@ -12,6 +12,7 @@
     border-radius: 50%;
     position: relative;
     display: inline-block;
+    z-index: 10;
 
     .#{$prefix}-icon {
         font-size: inherit;
